# concurrent_programming

./: .gitignore~
HWC1/: CMakeLists.txt  buffer_test.c  descrizione_astratta  descrizione_astratta~  main.c  msg_string.h
HWC2/: CMakeLists.txt  buffer.c  buffer_test.c  dispatcher.c  dispatcher.h  main.c  poison_pill.c  poison_pill.h  provider.c  provider.h  reader.c  reader.h
HWC2/HWC1/: buffer.h  buffer_test.c  msg.h  msg_string.c
HWC2/hwc2list/: TestDriver.c
HWJ-Interamente-Ricorsivo/: README.md
HWJ-Interamente-Ricorsivo/src/model/adder/: BinaryTreeAdder.java
HWJ/src/bounded/: BoundedBinaryTreeAdder.java  BoundedBufferAdderTask.java
HWJ/src/fork_join/: ForkJoinBinaryTreeAdder.java  ForkJoinBinaryTreeTask.java
HWJ/src/model/: BinaryTreeAdder.java
HWJ/src/model/adder/: UnboundedBufferBinaryTreeAdder.java  UnboundedBufferSumTask.java
HWJ/src/model/bounded/: BoundedBinaryTreeAdder.java  BoundedBufferAdderTask.java
HWJ/src/model/processor/: FakeProcessor.java  OnerousProcessor.java
HWJ/src/model/serial/: SerialBinaryTreeAdder.java
HWJ/src/model/speedUp/: Measurenment.java
HWJ/src/unitTest/: Main.java
buon_natale/: buon_natale_dal_cecio.c
examplesOfUsingJavaThread/src/: PingPong.java  TwoThread.java  TwoThreadsSleep.java
examplesOfUsingJavaThread/src/ProducerConsumerCompetition/: Consumer.java  CubbyHole.java  Producer.java  ProducerConsumerTest.java
examplesOfUsingJavaThread/src/ThreadInterference/: CorruptWrite.java  CorruptWriteSynchronized.java
examplesOfUsingJavaThread/src/ThreadInterrupt/: PendingInterrupt.java  SleepInterrupt.java
(+32 files in other folders)
